css/default.css
/* ... */
table.leaderboard td, table.leaderboard th {
	display: table-cell;
	vertical-align: inherit;
}

table.leaderboard {
	background: #E6F0FF;
	border-collapse: collapse;
	border: 0px none #cccccc;
	margin: 1em 1em 1em 0;
}

table.leaderboard th, table.leaderboard td {
	border-bottom: 1px #cccccc solid;
	padding: 6px 12px;
}

table.leaderboard tr:nth-of-type(odd) {
	background: #D6E3F1;
}

table.leaderboard tr.header th, table.leaderboard td {
	text-align: left;
}

table.leaderboard td:nth-child(1) {
	text-align: left;
}


@media only screen and (min-width: 701px) {
	table.leaderboard tr:nth-child(2) td:nth-child(1)::before { content: '1. '; }
	table.leaderboard tr:nth-child(3) td:nth-child(1)::before { content: '2. '; }
	table.leaderboard tr:nth-child(4) td:nth-child(1)::before { content: '3. '; }
	table.leaderboard tr:nth-child(5) td:nth-child(1)::before { content: '4. '; }
	table.leaderboard tr:nth-child(6) td:nth-child(1)::before { content: '5. '; }
	table.leaderboard tr:nth-child(7) td:nth-child(1)::before { content: '6. '; }
	table.leaderboard tr:nth-child(8) td:nth-child(1)::before { content: '7. '; }
	table.leaderboard tr:nth-child(9) td:nth-child(1)::before { content: '8. '; }
	table.leaderboard tr:nth-child(10) td:nth-child(1)::before { content: '9. '; }
	table.leaderboard tr:nth-child(11) td:nth-child(1)::before { content: '10. '; }
}

@media only screen and (max-width: 700px) {

	table.leaderboard, table.leaderboard thead, table.leaderboard tbody, 
	table.leaderboard th, table.leaderboard td, table.leaderboard tr {
		display: block;
	}

	table.leaderboard tr.header {
		position: absolute;
		top: -9999px;
		left: -9999px;
	}

	table.leaderboard tr {
		border: 1px solid #ccc;
	}

	table.leaderboard td {
		border: none;
		border-bottom: 1px solid #eee;
		position: relative;
		padding-left: 50%;
	}

	table.leaderboard td:before {
		position: absolute;
		top: 6px;
		left: 6px;
		width: 45%;
		padding-right: 10px;
		white-space: nowrap;
		font-weight: bold;
	}

	td:nth-of-type(1):before { content: "Name"; }
	td:nth-of-type(2):before { content: "Last War Star Count"; }
	td:nth-of-type(3):before { content: "Total Star Count"; }
	td:nth-of-type(4):before { content: "Average Stars Per Attack"; }
}

/* Forms */


.contact-question {
	margin-top: 15px;
	color: rgb(80,80,80);
	font-weight: 700;
}

.textbox { 
    border: 1px solid #c4c4c4; 
    height: 18px; 
    width: 275px; 
    font-size: 13px; 
    padding: 4px 4px 4px 4px; 
    box-shadow: 0px 0px 8px #d9d9d9; 
    -moz-box-shadow: 0px 0px 8px #d9d9d9; 
    -webkit-box-shadow: 0px 0px 8px #d9d9d9; 
} 
 
.textbox:focus { 
    outline: none; 
    border: 1px solid #7bc1f7; 
    box-shadow: 0px 0px 8px #7bc1f7; 
    -moz-box-shadow: 0px 0px 8px #7bc1f7; 
    -webkit-box-shadow: 0px 0px 8px #7bc1f7; 
} 


.selectbox { 
    border: 1px solid #c4c4c4; 
    height: 27px; 
    width: 285px; 
    font-size: 13px; 
    padding: 4px 4px 4px 4px; 
    background-color: #fff;
    box-shadow: 0px 0px 8px #d9d9d9; 
    -moz-box-shadow: 0px 0px 8px #d9d9d9; 
    -webkit-box-shadow: 0px 0px 8px #d9d9d9; 
} 
.selectbox:focus { 
    outline: none; 
    border: 1px solid #7bc1f7; 
    box-shadow: 0px 0px 8px #7bc1f7; 
    -moz-box-shadow: 0px 0px 8px #7bc1f7; 
    -webkit-box-shadow: 0px 0px 8px #7bc1f7; 
} 

.textarea { 
    border: 1px solid #c4c4c4; 
    height: 120px; 
    width: 400px; 
    font-size: 13px; 
    padding: 4px 4px 4px 4px; 
    box-shadow: 0px 0px 8px #d9d9d9; 
    -moz-box-shadow: 0px 0px 8px #d9d9d9; 
    -webkit-box-shadow: 0px 0px 8px #d9d9d9; 
}


@media only screen and (max-width: 460px) {
	.textarea { 
		border: 1px solid #c4c4c4; 
		height: 120px; 
		width: 275px; 
		font-size: 13px; 
		padding: 4px 4px 4px 4px; 
		box-shadow: 0px 0px 8px #d9d9d9; 
		-moz-box-shadow: 0px 0px 8px #d9d9d9; 
		-webkit-box-shadow: 0px 0px 8px #d9d9d9; 
	}
}
 
 
.textarea:focus { 
    outline: none; 
    border: 1px solid #7bc1f7; 
    box-shadow: 0px 0px 8px #7bc1f7; 
    -moz-box-shadow: 0px 0px 8px #7bc1f7; 
    -webkit-box-shadow: 0px 0px 8px #7bc1f7; 
} 

.button {
	margin: 10px 0 0 0;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
	background-color: #4d90fe;
	background-image: -webkit-linear-gradient(top,#4d90fe,#4787ed);
	background-image: -moz-linear-gradient(top,#4d90fe,#4787ed);
	background-image: -ms-linear-gradient(top,#4d90fe,#4787ed);
	background-image: -o-linear-gradient(top,#4d90fe,#4787ed);
	background-image: linear-gradient(top,#4d90fe,#4787ed);
	border: 1px solid #3079ed;
	color: #fff;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	cursor: default;
	font-size: 12px;
	font-weight: bold;
	text-align: center;
	white-space: nowrap;
	margin-right: 16px;
	height: 27px;
	line-height: 27px;
	min-width: 80px;
	outline: 0px;
	padding: 0 8px;
}


/* start about */

.top{
	margin-top: 2%;
}
.top1{
	margin-top: 4%;
}

.grids_of_2 h2{
	display: block;
	font-size: 2.5em;
	color: #111111;
	letter-spacing: -2px;
}
.grid1_of_2{
	margin-top: 4%;
}

.grid1_of_2.left{
	margin-left: 14%;
}

/***** Media Quries *****/
@media (min-width: 650px) {
	.row {
		display: table;
		table-layout: fixed;
		width: 100%;
		text-align: center;
		margin: 30px 0 0;
	}
	.column-half {
		display: table-cell;
		width: 50%;
		padding: 0 20px;
	}
}
@media (min-width: 1131px) {
	.content .claninfo {
		width: 320px;
		float: left;
	}
	.coc-characters {
		float:right;
		width: 650px;
	}
}
@media (max-width: 700px) {
	.troop {
		display: none;
	}
	.coc-logo {
		display: none;
	}
}
@media (max-width: 1130px) {
	.content .claninfo {
		width: 320px;
		margin: 0 auto;
	}
	.coc-characters {
		display: block;
		width: 650px;
		margin: 0 auto;
	}
}
@media only screen and (max-width: 1366px) {
	.wrap{
		width:95%;
	}
	.hdr-nav {
		width: 58%;
	}
	.sub_nav li a {
		height: 40px;
		padding: 8px 16px;
	}
}
/* ... */

